--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,26 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  
+  print_hello:
+    docker:
+      - image: cimg/base:stable
+
+    steps:
+      - checkout
+      - run:
+          name: "Print Hello"
+          command: "echo "hello"
+  
+  print_world:
+    docker:
+      - image: cimg/base:stable
+
+    steps:
+      - checkout
+      - run:
+          name: "Print World"
+          command: "echo world"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +44,10 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+  
+  print_hello_workflow:
+    jobs:
+      - print_hello
+      - print_world:
+          requires:
+            - print_hello
