--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - checkout
       - run:
           name: "Print Hello"
-          command: "echo "hello"
+          command: "echo hello"
   
   print_world:
     docker:
