--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,4 +48,7 @@ workflows:
   print_hello_workflow:
     jobs:
       - print_hello
+      - print_world:
+            requires:
+                - print_hello
      
