--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,12 @@ jobs:
           name: "Print World"
           command: "echo world"
 
+    say_name:
+      - checkout
+      - run:
+          name: "say my name"
+          command: echo $MY_NAME
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
