--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - checkout
       - run:
           name: "My Name"
-          command: "echo $MY_NAME"
+          command: "echo $MY_NAME.value"
   
   
 
