--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,11 @@ version: 2.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+commands:
+  print_pipeline_id:
+    description: "Simple command to print pipeline ID"
+      steps:  
+        - run: echo ${CIRCLE_WORKFLOW_ID}
 jobs:
   say-hello:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
@@ -50,13 +55,16 @@ jobs:
       - run: |
             cat /tmp/workspace/output.txt
   
+  print_id:
+    docker:
+      - image: cimg/base:stable
+        steps:
+          - print_pipeline_id
   
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
+      - print_pipeline_id
       - say-hello
       - save_hello_world_output
       - print_output_file:
